[package]
name = "vpod"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
chrono = { version = "0.4.22", features = ["serde"] }
color-eyre = "0.6.2"
derive_builder = "0.11.2"
futures = "0.3.25"
html-escape = "0.2.11"
hyper = { version = "0.14.23", features = ["client", "http1", "tcp"] }
hyper-tls = "0.5.0"
quick-xml = "0.22.0" # this version was needed at some point for compat
reqwest = { version = "0.11.12", features = ["json"] }
rss = { version = "2.0.1", features = ["serde", "url", "mime", "validation"] }
rust_decimal = "1.26.1"
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_derive = "1.0.145"
serde_json = "1.0.86"
serde_path_to_error = "0.1.8"
sqlx = { version = "0.6.2", features = ["sqlite", "chrono", "runtime-tokio-native-tls"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs"] }
youtube_dl = { version = "0.7.0", default_features = false, features = ["yt-dlp", "tokio"] }
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
