[package]
name = "vpod"
version = "0.0.3"
edition = "2021"
license = "Unlicense"

[profile.release]
strip = true
lto = true

[dependencies]
axum = { version = "0.7.5", features = ["tokio", "query", "macros"] }
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = { version = "0.6.3", features = [
  "issue-url",
  "tracing-error",
  "capture-spantrace",
  "color-spantrace",
] }
fs_extra = "1.3.0"
futures = "0.3.25"
html-escape = "0.2.11"
hyper = { version = "0.14.23", features = ["client", "http1", "tcp"] }
hyper-tls = "0.5.0"
quick-xml = "0.22.0" # this version was needed at some point for compat
reqwest = { version = "0.11.12", features = ["json"] }
rss = { version = "2.0.1", features = ["serde", "url", "mime", "validation"] }
rust_decimal = "1.26.1"
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_derive = "1.0.145"
serde_json = "1.0.86"
serde_path_to_error = "0.1.8"
thiserror = "1.0.59"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = "0.7.4"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = "2.5.0"
valuable = { version = "0.1.0", features = ["derive"] }
youtube_dl = { version = "0.7.0", default-features = false, features = [
  "yt-dlp",
  "tokio",
] }
yt-feed-xml = "0.2.2"
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
