[package]
name = "vpod"
version = "0.0.3"
edition = "2021"
license = "Unlicense"

[profile.release]
strip = true
lto = true

[dependencies]
axum = { version = "0.7.5", features = ["tokio", "query", "macros"] }
axum-extra = { version = "0.9.3", features = ["async-read-body"] }
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = { version = "0.6.3", features = [
  "issue-url",
  "tracing-error",
  "capture-spantrace",
  "color-spantrace",
] }
fs_extra = "1.3.0"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["client", "http1", "tcp"] }
hyper-tls = "0.5.0"
quick-xml = { version = "0.31.0", features = ["async-tokio", "serialize", "serde-types"] }
reqwest = { version = "0.11.12", features = ["json"] }
rss = { version = "2.0.1", features = ["serde", "url", "mime", "validation"] }
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_derive = "1.0.145"
thiserror = "1.0.59"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = "2.5.0"
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
